hphp/hack/test/typecheck/gen1.php.exp
File "gen1.php", line 23, characters 3-5:
Some type constraint(s) here are violated (Typing[4110])
File "gen1.php", line 18, characters 14-14:
'T' is a constrained type parameter
File "gen1.php", line 18, characters 19-19:
This is an object of type A
File "gen1.php", line 22, characters 23-23:
It is incompatible with a value of generic type T
